# Foundry

./: .gitignore  Cargo.toml  README.md
example/: Cargo.toml  start_example.bat
example/src/: lib.rs
example/www/: index.html  index.js  package-lock.json
foundry-macro-html/: Cargo.toml
foundry-macro-html/src/: lib.rs
foundry_core/: Cargo.toml
foundry_core/src/: lib.rs
foundry_web/: Cargo.toml
foundry_web/src/: lib.rs  macros.rs
