[package]
name = "foundry_web"
version = "0.1.0"
authors = ["Oliver Moss <moss.oliver@outlook.com>"]
edition = "2018"

[dependencies]
wasm-bindgen = "0.2"
foundry_core = { path = "../foundry_core" }
proc-macro-hack = { version = "0.5" }
foundry-macro-html = { path = "../foundry-macro-html" }

js-sys = "0.3.33"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CssStyleDeclaration',
  'Document',
  'Element',
  'HtmlElement',
  'Window',
  'HtmlCollection',
  'Node',
  'NodeList',
  'Text',
]

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
